DAY 85 - Folder is added.

--- a/DAY-84/index.html
+++ b/DAY-84/index.html
@@ -22,47 +22,7 @@
       </form>
     </header>
 
-    <main class="main">
-      <div class="movie">
-        <img src="image.png" alt="Movie Thumbnail" />
-        <div class="movie-info">
-          <h3 class="movie-title">Movie Title</h3>
-          <span class="green">9.8</span>
-        </div>
-        <div class="overview">
-          <h3 class="overview-title">Overview Title</h3>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur illo
-          nisi fuga obcaecati explicabo distinctio a exercitationem ullam iure
-          facere.
-        </div>
-      </div>
-      <div class="movie">
-        <img src="image.png" alt="Movie Thumbnail" />
-        <div class="movie-info">
-          <h3 class="movie-title">Movie Title</h3>
-          <span class="orange">5.2</span>
-        </div>
-        <div class="overview">
-          <h3 class="overview-title">Overview Title</h3>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur illo
-          nisi fuga obcaecati explicabo distinctio a exercitationem ullam iure
-          facere.
-        </div>
-      </div>
-      <div class="movie">
-        <img src="image.png" alt="Movie Thumbnail" />
-        <div class="movie-info">
-          <h3 class="movie-title">Movie Title</h3>
-          <span class="red">3.2</span>
-        </div>
-        <div class="overview">
-          <h3 class="overview-title">Overview Title</h3>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur illo
-          nisi fuga obcaecati explicabo distinctio a exercitationem ullam iure
-          facere.
-        </div>
-      </div>
-    </main>
+    <main class="main"></main>
     <script src="script.js"></script>
   </body>
 </html>
